--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,42 @@ img {
 .social-link:hover svg {
   fill: #ffffff;
 }
+
+@media screen and (max-width: 850px){
+  .page-header .list-nav, .page-footer .list-nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-item:nth-child(2) {
+    margin-left: 0;
+  }
+
+  .nav-item {
+    margin-top: 20px;
+  }
+
+  .review-list {
+    flex-direction: column;
+  }
+
+  .review-item {
+    max-width: 100%;
+    margin-bottom: 40px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .review-text {
+    max-width: 370px;
+  }
+
+}
+
+@media screen and (max-width: 500px) {
+  .main-news-title {
+    font-size: 32px;
+    line-height: 150%;
+  }
+}
+
