--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 14px;
 
   color: #000000;
@@ -26,7 +26,7 @@ body {
 h1,h2,h3 {
   margin: 0;
 
-  font-family: 'Playfair Display', serif;
+  font-family: 'Playfair Display', 'Times New Roman', Times, serif;
 }
 
 img {
@@ -156,7 +156,7 @@ img {
 .main-news-title {
   margin-top: 32px;
 
-  font-family: 'Roboto';
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 72px;
@@ -203,7 +203,7 @@ img {
 .ticket-header {
   margin-bottom: 20px;
 
-  font-family: 'Roboto';
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 17px;
@@ -329,7 +329,7 @@ img {
 }
 
 .ticket-feature {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Playfair Display', 'Times New Roman', Times, serif;
 }
 
 .ticket-text {
@@ -385,7 +385,7 @@ img {
 .logo-text {
   align-self: center;
 
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', 'Times New Roman', Times, serif;
   font-style: normal;
   font-weight: 900;
   font-size: 28px;
